BradkenProduction/force-app/main/default/objects/Product_Manager_Mapping__mdt/Product_Manager_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Maps Product Manager (SF Users) to Opportunity Product Groups</description>
    <label>Product Manager Mapping</label>
    <pluralLabel>Product Manager Mappings</pluralLabel>
</CustomObject>