BradkenProduction/force-app/main/default/objects/Product_Manager_Mapping__mdt/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Balls &amp; Rings, Industrial and Rail Products</fullName>
                <default>true</default>
                <label>Balls &amp; Rings, Industrial and Rail Products</label>
            </value>
            <value>
                <fullName>Crawler Systems</fullName>
            </value>
            <value>
                <fullName>Crusher Liners, Steel Liners</fullName>
            </value>
            <value>
                <fullName>Fixed Plant Liners</fullName>
            </value>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>Mining Buckets</fullName>
            </value>
            <value>
                <fullName>Other MinPro</fullName>
            </value>
            <value>
                <fullName>Sugar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>