BradkenProduction/force-app/main/default/objects/Product_Manager_Mapping__mdt/fields/Product_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager_Name__c</fullName>
    <label>Product Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>