BradkenProduction/force-app/main/default/objects/Product_Manager_Mapping__mdt/fields/Product_Manager_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager_User_ID__c</fullName>
    <label>Product Manager User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>