BradkenProduction/force-app/main/default/objects/Product_Manager_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Product_Group__c</columns>
    <columns>Product_Manager_Name__c</columns>
    <columns>Product_Manager_User_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>